<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <ImageView
        android:id="@+id/imgSelectColors"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@id/imageBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <ImageView
        android:id="@+id/imageBackground"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:src="@drawable/mazda6background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgSelectColors"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/descriptionLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/imageBackground">

        <TextView
            android:id="@+id/tvDescriptionTitleDetail"
            style="@style/titleDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/desctiption_title" />

        <TextView
            android:id="@+id/tvDescriptionTextDetail"
            style="@style/textDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/decsription_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descriptionLayout">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnShowDetail"
            android:layout_width="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:cornerRadius="10dp"
            android:layout_height="75dp"
            android:text="@string/btnTitleDetail" />

    </LinearLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

        <include
            layout="@layout/bottom_sheet"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>





</androidx.constraintlayout.widget.ConstraintLayout>